--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,10 +73,23 @@
                 android:layout_marginRight="4dp"
                 android:background="@drawable/bg_btn"
                 android:backgroundTint="#00FFFFFF"
-                android:text="Ganti id perangkat"
+                android:text="Ganti ID"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/btnGantiKalibrasi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:background="@drawable/bg_btn"
+                android:backgroundTint="#00FFFFFF"
+                android:text="Ganti kalibrasi"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <LinearLayout
@@ -244,6 +257,7 @@
                 android:text="Jarak : 0 meter"
                 android:textColor="@color/black"
                 android:textSize="12sp"
+                android:visibility="gone"
                 android:textStyle="bold" />
 
             <Button
@@ -285,6 +299,7 @@
             android:layout_marginHorizontal="8dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal"
+            android:visibility="gone"
             android:layout_marginTop="8dp">
 
             <Button
@@ -335,6 +350,7 @@
             android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold"
+            android:visibility="gone"
             android:layout_marginTop="8dp"/>
 
 
@@ -355,7 +371,19 @@
             android:textColor="@color/black"
             android:textSize="14sp"
             android:textStyle="bold"
+            android:visibility="gone"
             android:layout_marginTop="8dp"/>
+
+        <TextView
+            android:id="@+id/txtHasil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hasil:"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_marginTop="8dp"
+            android:visibility="gone"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
